--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
     display: flex;
     flex-direction: column;                                                                  
     font-size: 0.9rem;    
-    gap: 20rem;                               
+    gap: 10rem;                               
 }
 
 main {  
@@ -197,7 +197,7 @@ header.sticky {
 }
 
 .my-name {
-    font-size: 2.2rem;
+    font-size: 4.8vw;
 }
 
 .first {
@@ -212,7 +212,7 @@ header.sticky {
     max-width: 540px;
     color: var(--slate);
     line-height: 1.7rem;
-    font-size: 1.1rem;
+    font-size: 1rem;
 }
 
 .roadmap {
@@ -287,7 +287,7 @@ header.sticky {
 }
 
 .about-text p {
-    font-size: 1.1rem;
+    font-size: 1rem;
     line-height: 1.7rem;
     color: var(--slate);
 }
