--- a/styles.css
+++ b/styles.css
@@ -207,7 +207,7 @@ header.sticky {
     display: flex;
     flex-direction: column;
     gap: 1.3rem;
-    margin-bottom: 10rem;
+    margin-bottom: 14rem;
 }
 
 .hi {
@@ -327,11 +327,34 @@ header.sticky {
 
 .tag {
     padding: 0.25rem 0.5rem;
+    font-weight: 500;
     border: 1px solid var(--green);
     border-radius: 0.3rem;
+}
+
+.tag1 {   
     background: var(--dark-navy);
     color: var(--green);
-    font-weight: 500;
+}
+
+.tag2 {  
+    background: var(--dark-navy);
+    color: var(--blue);
+}
+
+.tag3 { 
+    background: var(--dark-navy);
+    color: silver;
+}
+
+.tag4 {
+    background: var(--dark-navy);
+    color: var(--pink);
+}
+
+.tag5 {
+    background: var(--dark-navy);
+    color:chartreuse;
 }
 
 .image-container {
@@ -358,12 +381,12 @@ header.sticky {
 }
 
 .project-card {
-    padding: 2rem;
+    padding: 1.5rem;
     background-color: var(--light-navy);
     border-radius: 5px;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
 }
 
 .project-header {
@@ -371,6 +394,14 @@ header.sticky {
     justify-content: space-between;
     font-size: 1.3rem;
     margin-bottom: 1.5rem;
+}
+
+.project-header i {
+    transition: 0.7s ease;
+}
+
+.project-header i:hover {
+    color: var(--lightest-slate);
 }
 
 .fa-github {
