--- a/styles.css
+++ b/styles.css
@@ -102,8 +102,9 @@ header.sticky {
 }
 
 .logo:hover {
-    background-color: var(--green);
-    color: var(--dark-navy);
+    box-shadow: 0 0 10px 4px var(--green);
+    border-color: var(--green); /* Optional, just reinforces the glow */
+    color: var(--green);
 }
 
 /* === NAVBAR === */
@@ -132,6 +133,7 @@ header.sticky {
     text-decoration: none;
     color: var(--lightest-slate);
     font-size: 0.9rem;
+    transition: 0.7s ease;
 }
 
 .nav-link {
@@ -162,32 +164,10 @@ header.sticky {
 }
 
 .resume:hover {
-    background-color: var(--green);
-    color: var(--dark-navy);
+    box-shadow: 0 0 10px 4px var(--green);
+    border-color: var(--green); /* Optional, just reinforces the glow */
+    color: var(--lightest-slate);
 }
-
-
-/* --- JAVASCRIPT -------------------------------------------- */
-
-.nav-link,
-.resume {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.6s ease, transform 0.6s ease;
-}
-
-.nav-link.visible,
-.resume.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-/* --- JAVASCRIPT -------------------------------------------- */
-
-
-
-
-
 
 /* === HAMBURGER === */
 
@@ -558,7 +538,7 @@ footer p {
         gap: 0rem;
     }
 
-    main {  
+    main { 
         padding: 0 90px;
     }
 
