--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ header {
 
 header.sticky {
     height: 4.5rem;  
-    box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+    box-shadow: 0 6px 20px rgba(100, 255, 218, 0.2);
 }
 
 .logo {
